spec/e2e/number/decimal_point_at_eof.lit
# error: [line 2] Syntax error at end: I was expecting a property name after '.'.
123.